--- a/styles.css
+++ b/styles.css
@@ -6,10 +6,6 @@
   box-sizing: border-box;
 }
 
-html {
-  scroll-behavior: smooth;
-}
-
 h1,
 h2,
 h3,
@@ -22,94 +18,25 @@ span {
   line-height: 1.25;
 }
 
-h1 {
-  font-size: 36px;
-}
-
 p {
   line-height: 1.5;
   font-size: 16px;
-}
-
-a {
-  text-decoration: none;
-  position: relative;
-  transition: opacity 300ms ease;
-}
-
-i:hover {
-  opacity: 0.7;
-}
-
-.link__hover-effect:after {
-  content: "";
-  position: absolute;
-  height: 3px;
-  width: 0;
-  bottom: -3px;
-  right: 0;
-  transition: all 300ms ease;
-}
-
-.link__hover-effect--white:after {
-  background-color: #fff;
-}
-.link__hover-effect--black:after {
-  background-color: #000;
-}
-
-.link__hover-effect:hover:after {
-  width: 100%;
-  left: 0;
 }
 
 li {
   list-style-type: none;
 }
 
-.flex {
-  display: flex;
-}
-
-.flex-1 {
-  flex: 1;
-}
-
-.container {
-  padding: 50px 0;
-}
-.row {
-  width: 100%;
-  max-width: 800px;
-  margin: 0 auto;
-  padding: 0 12px;
-}
-
-.text--purple {
-  color: #6030b1;
-}
-
-section:nth-child(even) {
-  background-color: #f8f8f8;
-}
-
-.section__title {
-  margin-bottom: 20px;
-}
-
 /* NAVIGATION BAR */
 
 nav {
   height: 100px;
-  width: 100%;
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
   justify-content: space-between;
   align-items: center;
-  padding: 0 12px;
 }
-
 .nav__link--list {
   display: flex;
 }
@@ -117,15 +44,16 @@ nav {
 .nav__link--anchor {
   margin: 0 12px;
   color: #242424;
+  text-decoration: none;
   font-weight: 700;
+  transition: all 300ms ease;
 }
 
 .nav__link--anchor-primary {
   background-color: #6030b1;
   padding: 8px 20px;
-  border-radius: 50px;
   color: white;
-  transition: all 300ms ease;
+  border-radius: 50px;
 }
 
 .nav__link--anchor-primary:hover {
@@ -139,69 +67,9 @@ nav {
   font-weight: bold;
 }
 
-.text--purple {
-  color: #6030b1;
-}
-
 /* ABOUT ME */
 
 #about-me {
   min-height: 100vh;
-  display: flex;
-  flex-direction: column;
 }
-
-.about-me__info {
-  display: flex;
-  flex-direction: column;
-}
-
-.about-me__info--container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 500px;
-  margin: 0 auto;
-  text-align: center;
-}
-
-.about-me__picture--mask {
-  width: 100px;
-  height: 100px;
-  border-radius: 50%;
-  overflow: hidden;
-  box-shadow: 0 8px 16px rgba(0, 0, 0, 0, 16);
-  margin-bottom: 8px;
-}
-.about-me__picture {
-  width: 100%;
-  transform: scale(1.5);
-  padding: 8px;
-}
-
-.about-me__info--para {
-  font-size: 20px;
-  margin-bottom: 28px;
-}
-.about-me__info--title {
-  margin-bottom: 16px;
-}
-
-.about-me__link {
-  font-size: 20px;
-  color: #242424;
-  text-decoration: none;
-  padding: 0 16px;
-}
-
-.about-me__img--container {
-  flex: 1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-}
-
-.about-me__img {
-  width: 100%;
-}
+https: ; //youtu.be/C8BlRjB3vYI?t=916
