--- a/styles.css
+++ b/styles.css
@@ -18,6 +18,10 @@ span {
   line-height: 1.25;
 }
 
+h1 {
+  font-size: 36px;
+}
+
 p {
   line-height: 1.5;
   font-size: 16px;
@@ -27,10 +31,29 @@ li {
   list-style-type: none;
 }
 
+.flex {
+  display: flex;
+}
+
+.flex-1 {
+  flex: 1;
+}
+
+.row {
+  width: 100%;
+  max-width: 800px;
+  margin: 0 auto;
+}
+
+.text--purple {
+  color: #6030b1;
+}
+
 /* NAVIGATION BAR */
 
 nav {
   height: 100px;
+  width: 100%;
   max-width: 1000px;
   margin: 0 auto;
   display: flex;
@@ -71,5 +94,67 @@ nav {
 
 #about-me {
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
-https: ; //youtu.be/C8BlRjB3vYI?t=916
+
+.about-me__info {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.about-me__info--container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  align-items: center;
+  max-width: 600px;
+  margin: 0 auto;
+  text-align: center;
+}
+
+.about-me__picture--mask {
+  width: 100px;
+  height: 100px;
+  border-radius: 50%;
+  overflow: hidden;
+  box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
+  margin-bottom: 28px;
+}
+
+.about-me__picture {
+  width: 100%;
+  transform: scale(1);
+}
+
+.about-me__info--title {
+  margin-bottom: 16px;
+}
+
+.about-me__info--para {
+  font-size: 20px;
+  margin-bottom: 28px;
+}
+
+.about-me__link {
+  font-size: 20px;
+  color: #242424;
+  text-decoration: none;
+  padding: 0 16px;
+}
+
+.about-me__img--container {
+  flex: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 100px;
+}
+
+.about-me__img {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  width: 600px;
+}
