--- a/styles.css
+++ b/styles.css
@@ -17,7 +17,7 @@ h4,
 h5,
 h6,
 span {
-  color: #242424;
+  color: #eeeeee;
   text-align: center;
   line-height: 1.25;
 }
@@ -34,6 +34,11 @@ p {
 a {
   text-decoration: none;
   position: relative;
+  transition: opacity 300ms ease;
+}
+
+i:hover {
+  opacity: 0.7;
 }
 
 .link__hover-effect:after {
@@ -50,8 +55,8 @@ a {
   background-color: #fff;
 }
 
-.link__hover-effect--black:after {
-  background-color: black;
+.link__hover-effect--colour-change:after {
+  background-color: #00adb5 !important;
 }
 
 .link__hover-effect:hover:after {
@@ -82,12 +87,16 @@ li {
   padding: 0 12px;
 }
 
-.text--purple {
-  color: #6030b1;
+.text--colour-change {
+  color: #00adb5;
+}
+
+section:nth-child(odd) {
+  background-color: #222831;
 }
 
 section:nth-child(even) {
-  background-color: #f8f8f8;
+  background-color: #393e46;
 }
 
 .section__title {
@@ -112,25 +121,27 @@ nav {
 
 .nav__link--anchor {
   margin: 0 12px;
-  color: #242424;
+  color: #eeeeee;
   font-weight: 700;
   transition: all 300ms ease;
 }
 
 .nav__link--anchor-primary {
-  background-color: #6030b1;
+  background-color: #09959c;
   padding: 8px 20px;
-  color: white;
+  color: #eeeeee;
   border-radius: 50px;
 }
 
 .nav__link--anchor-primary:hover {
-  background-color: #5d3eff;
+  /* background-color: #066e74; */
+  background-color: #eeeeee;
+  color: #09959c;
 }
 
 .personal__logo {
   font-size: 24px;
-  color: #6030b1;
+  color: #00adb5;
   margin: 0 12px;
   font-weight: bold;
 }
@@ -166,6 +177,19 @@ nav {
   overflow: hidden;
   box-shadow: 0 8px 16px rgba(0, 0, 0, 0.16);
   margin-bottom: 28px;
+  animation: animate-profile-picture 800ms 200ms backwards;
+}
+
+@keyframes animate-profile-picture {
+  0% {
+    transform: scale(0);
+  }
+  80% {
+    transform: scale(1.2);
+  }
+  100% {
+    transform: scale(1);
+  }
 }
 
 .about-me__picture {
@@ -173,19 +197,34 @@ nav {
   transform: scale(1);
 }
 
+@keyframes fade-up {
+  0% {
+    opacity: 0;
+    transform: translateY(40px);
+  }
+  100% {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
 .about-me__info--title {
   margin-bottom: 16px;
+  animation: fade-up 650ms 400ms backwards;
 }
 
 .about-me__info--para {
   font-size: 20px;
   margin-bottom: 28px;
+  animation: fade-up 650ms 400ms backwards;
+  color: #eeeeee;
 }
 
 .about-me__link {
   font-size: 20px;
-  color: #242424;
+  color: #eeeeee;
   padding: 0 16px;
+  animation: fade-up 650ms 600ms backwards;
 }
 
 .about-me__img--container {
@@ -201,6 +240,36 @@ nav {
   display: flex;
   align-items: center;
   width: 600px;
+  animation: fade-in 1200ms 800ms backwards;
+}
+
+.about-me__links {
+  animation: fade-up 650ms 800ms backwards;
+}
+
+@keyframes fade-in {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
+}
+
+.wave {
+  display: inline-block;
+  animation: animate-wave 500ms infinite ease-in-out;
+}
+@keyframes animate-wave {
+  0% {
+    transform: rotate(0);
+  }
+  50% {
+    transform: rotate(30deg);
+  }
+  100% {
+    transform: rotate(0);
+  }
 }
 
 /* TECH - STACK */
@@ -238,6 +307,13 @@ nav {
   transform: scale(0.9);
 }
 
+.language:hover .language__img--latex {
+  filter: brightness(80%);
+  opacity: 0.86;
+  transform: scale(0.9);
+  filter: invert(100%);
+}
+
 .language__name {
   position: absolute;
   bottom: 0;
@@ -250,6 +326,10 @@ nav {
 .language:hover .language__name {
   transform: scale(1);
   opacity: 1;
+}
+
+.language__img--latex {
+  filter: invert(100%);
 }
 
 /* PROJECTS  */
